tests/snapshots/spec/11-testing__block_without_assert.snap
---
source: crates/clean-compiler/tests/spec_suite.rs
expression: rendered
---
AST:
[
    Tests(
        [
            Block {
                description: "forgot the assert",
                body: [
                    VarDecl {
                        ty: TypeExpr {
                            base: Integer(
                                None,
                            ),
                            optional: false,
                            extra_optionals: [],
                            behaviors: [],
                            span: ByteSpan {
                                start: 30,
                                end: 37,
                            },
                        },
                        name: "total",
                        init: Some(
                            Call {
                                callee: Ident {
                                    name: "add",
                                    span: ByteSpan {
                                        start: 46,
                                        end: 49,
                                    },
                                },
                                args: [
                                    Int {
                                        value: 2,
                                        span: ByteSpan {
                                            start: 50,
                                            end: 51,
                                        },
                                    },
                                    Int {
                                        value: 3,
                                        span: ByteSpan {
                                            start: 53,
                                            end: 54,
                                        },
                                    },
                                ],
                                span: ByteSpan {
                                    start: 46,
                                    end: 55,
                                },
                            },
                        ),
                        on_error: None,
                        span: ByteSpan {
                            start: 30,
                            end: 56,
                        },
                    },
                ],
                span: ByteSpan {
                    start: 8,
                    end: 56,
                },
            },
        ],
    ),
]
DIAGNOSTICS: 1
  SYN005 spec/11-testing/block_without_assert.cln:2:2 block test "forgot the assert" has no assert; a test asserts at least once
